--- a/src/main/java/underfloormanagement/config.properties
+++ b/src/main/java/underfloormanagement/config.properties
@@ -1,17 +1,12 @@
-# 
-# Intervals in miliseconds
-# Overrun in minutes
-# ReleaseType choice nc/no
+# To change this license header, choose License Headers in Project Properties.
+# To change this template file, choose Tools | Templates
+# and open the template in the editor.
 
 RelaisType=nc
-AtagEmail=mail@mail.com
+AtagEmail=lennert@aaca.nl
 AtagPassword=123
-VBusApiUrl=https://www.vbus.net/api/v3/data/scheme/0000
-VBusInterval=9000
-AtagInterval=10000
-aaCACommandInterval=1000
-aaCACommandFile=/domains/xxxxx/public_html/u/command.txt
-aaCAFtpUrl="xxxxx"
-aacaFtpUsername="bla"
-aacaFtpPassword="bla"
-OverrunMinutes=10
+VBusApiUrl=https://www.vbus.net/api/v3/data/scheme/8201
+VBusInterval=60000
+AtagInterval=60000
+OverrunMinutes=5
+SystemMonitorInterval=600000
