--- a/src/main/java/underfloormanagement/config.properties
+++ b/src/main/java/underfloormanagement/config.properties
@@ -7,6 +7,10 @@ AtagEmail=lennert@aaca.nl
 AtagPassword=123
 VBusApiUrl=https://www.vbus.net/api/v3/data/scheme/8201
 VBusInterval=60000
-AtagInterval=60000
+AtagInterval=59000
+TempInterval=10000
 OverrunMinutes=5
-SystemMonitorInterval=600000
+SystemMonitorInterval=60000
+Temp1=/sys/bus/w1/devices/28-3c01b60714ca/temperature
+Temp2=/sys/bus/w1/devices/28-3c01b607b04d/temperature
+Temp3=/sys/bus/w1/devices/28-3c01b607ef5e/temperature
