--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.hispaniola</groupId>
   <artifactId>UnderfloorManagement</artifactId>
-  <version>1.2-SNAPSHOT</version>
+  <version>1.3</version>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
@@ -14,7 +13,7 @@
     <scp.host>192.168.1.8</scp.host>
     <scp.remotedir>/home/pi/UnderfloorManagement</scp.remotedir>
     <scp.userid>pi</scp.userid>
-    <scp.keyfile>${user.home}/.ssh/id_rsa</scp.keyfile>
+    <scp.keyfile>${user.home}/.ssh/id_rsa_pi</scp.keyfile>
   </properties>
 
   <build>
@@ -23,6 +22,7 @@
         <directory>src/main/java/underfloormanagement</directory>
         <includes>
           <include>config.properties</include>
+          <include>log4j2.xml</include>
         </includes>
       </resource>
     </resources>
@@ -77,9 +77,7 @@
             </goals>
             <configuration>
               <target>
-                <scp todir="${scp.userid}@${scp.host}:${scp.remotedir}" verbose="true" trust="true" sftp="true" failonerror="true"
-                     keyfile="${scp.keyfile}"
-                     passphrase="${scp.passphrase}">
+                <scp todir="${scp.userid}@${scp.host}:${scp.remotedir}" verbose="true" trust="true" sftp="true" failonerror="true" keyfile="${scp.keyfile}" passphrase="">
                   <fileset dir="${project.basedir}/target">
                     <include name="UnderfloorManagement*.jar"/>
                     <include name="lib/*.*" />
@@ -134,19 +132,14 @@
       <version>v1.4.6</version>
     </dependency>
     <dependency>
-      <groupId>com.microsoft.azure.sdk.iot</groupId>
-      <artifactId>iot-device-client</artifactId>
-      <version>1.5.37</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>2.19.0</version>
     </dependency>
     <dependency>
-      <groupId>com.microsoft.azure.sdk.iot</groupId>
-      <artifactId>iot-service-client</artifactId>
-      <version>1.7.23</version>
-    </dependency>
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-      <version>1.2.17</version>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.19.0</version>
     </dependency>
   </dependencies>
 
