--- a/src/main/java/underfloormanagement/config.properties
+++ b/src/main/java/underfloormanagement/config.properties
@@ -14,3 +14,4 @@ SystemMonitorInterval=60000
 Temp1=/sys/bus/w1/devices/28-3c01b60714ca/temperature
 Temp2=/sys/bus/w1/devices/28-3c01b607b04d/temperature
 Temp3=/sys/bus/w1/devices/28-3c01b607ef5e/temperature
+TempThreshold=25000
